# ocim_plugin

./: .gitignore  README.md  pyproject.toml
src/OCIM/: __init__.py  discovery.py  plugin.py  resource.py
src/OCIM/util/: cut_detection.py  fallthrough_detection.py  follows_relations.py  log_splitting.py  ocpn_conversion.py  tau_cases.py  util.py
src/plugin-template/: plugin.py  resource.py  util.py
src/plugin-template/util/: auxillary_methods.py  common_data.py  cut_definition.py  detect_tau.py  dfg.py  fallthrough_definition.py  fallthrough_evaluation.py  interaction_patterns.py  split_log.py  util.py
